Dashboard layout bug fixed

--- a/Client/src/components/Dashboard.css
+++ b/Client/src/components/Dashboard.css
@@ -23,6 +23,29 @@ ul{
     justify-content: space-between;
 }
 
+.audioDiv{
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+
+
+.audioFile{
+    border: 2px solid #646EE4;
+    background-color: #646EE4;
+    width: 100%;
+    border-radius: 12px;
+    margin-bottom: 10px;
+}
+
+audio::-webkit-media-controls-panel{
+    background-color: #646EE4;
+
+}
+
 .ppIcon{
     margin-right: 10px;
 }
